--- a/FE/package.json
+++ b/FE/package.json
@@ -19,12 +19,15 @@
     "antd": "^2.13.10",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "css-loader": "^0.28.7",
+    "optimist": "^0.6.1",
+    "react": "^15.5.0",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
