--- a/FE/package.json
+++ b/FE/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^2.13.10",
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.7",
@@ -25,6 +26,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.19.0"
