--- a/FE/package.json
+++ b/FE/package.json
@@ -38,6 +38,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "sass": "^1.0.0-beta.4",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
   }
