--- a/FE/package.json
+++ b/FE/package.json
@@ -21,11 +21,12 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "qrcode.react": "^0.8.0",
     "react": "^15.5.0",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.2.2",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
     "sass": "^1.0.0-beta.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0"
